Fix: tooltip alignment

--- a/src/modules/dashboard/components/CreateColonyWizard/StepCreateToken.css
+++ b/src/modules/dashboard/components/CreateColonyWizard/StepCreateToken.css
@@ -37,10 +37,27 @@
 
 @media screen and query700 {
   .main {
+    padding-bottom: 40px;
     width: 100%;
   }
 
   .titleSection {
     margin-top: 155px;
+  }
+
+  .inputFields > div {
+    min-height: 87px;
+  }
+
+  .inputFields > div:first-child {
+    min-height: 109px;
+  }
+
+  .inputFieldWrapper {
+    margin-bottom: 25px;
+  }
+
+  .actionsContainer {
+    margin-top: 25px;
   }
 }
